--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "vue-multiselect": "^2.1.6",
     "vue-router": "^4.1.2",
     "vue-select": "^4.0.0-beta.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
