--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-basic-alert": "^1.1.0",
+    "vue-loading-overlay": "6.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^4.1.2",
     "vue-select": "^4.0.0-beta.5",
+    "vue-toast-notification": "3.0",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
   },
